fix [#35646] Image offset value in empty image display mode should be unitless